// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 yBlmn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 breHlv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jazqMc FormField__FormFieldBox-m9hood-0 jGEMXj"
    >
      <label
        class="StyledText-sc-1sadyjn-0 esuSAl"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fwONFA FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 XeSGl"
            disabled=""
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 yBlmn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 breHlv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jazqMc FormField__FormFieldBox-m9hood-0 jGEMXj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 daSUHp FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 hKejfQ"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 yBlmn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 breHlv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jazqMc FormField__FormFieldBox-m9hood-0 jGEMXj"
    >
      <label
        class="StyledText-sc-1sadyjn-0 esuSAl"
      >
        Some input
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 erMGdB"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 daSUHp FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 hKejfQ"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 yBlmn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 breHlv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jazqMc FormField__FormFieldBox-m9hood-0 jGEMXj"
    >
      <label
        class="StyledText-sc-1sadyjn-0 esuSAl"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 daSUHp FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 hKejfQ"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 yBlmn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 breHlv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jazqMc FormField__FormFieldBox-m9hood-0 jGEMXj"
    >
      <label
        class="StyledText-sc-1sadyjn-0 esuSAl"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 bznnlx FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 hKejfQ"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 dxYrxD"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 yBlmn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 breHlv"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jazqMc FormField__FormFieldBox-m9hood-0 jGEMXj"
    >
      <label
        class="StyledText-sc-1sadyjn-0 esuSAl"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 daSUHp FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 hKejfQ"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fmFxNm"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
